--- a/gb/22/10/19/n13848759.md
+++ b/gb/22/10/19/n13848759.md
@@ -2,7 +2,7 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共公安部称中国最安全 民讥讽：唐山最安全</h2>
-<a href="https://d3frzobj0kj0md.cloudfront.net/S3q6KRAfn"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d2torrlf4djx10.cloudfront.net/Z3y6KRAfv"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>唐山打人事件现场，暴徒从店内打到店外，两名女子被围殴倒地。（视频截图）
 </h6>
 <hr>
@@ -25,11 +25,11 @@
 <p>她指出，“中共从上台的第一天起，就是以谎言起家的，到今天，它一直持续用谎言来维持它的统治。通过铁链女也好，唐山打人事件也好。我相信已经有越来越多的中国人，看透了中共的本质，就是一个流氓组织，就是一个邪教！</p>
 <p>“所以我们希望呼吁更多的中国人，要么就是站出来，要么就是远离中共这个恶魔。”</p>
 <p>中国人权律师吴绍平也认为，“我相信，中国人生活在中国社会，没有人会真正地相信官方的说法。而且每一个中国人经过唐山事件和铁链女之后都应该明白，在中国没有安全可言，没有司法公正可言，你走在马路上，随时都可能变成唐山被打女，随时都可能变成徐州的铁链女。”</p>
-<p><center><a title="网友实地探访唐山打人事件案发地；目击者谈唐山烧烤店巷子事件；唐山被打女孩的伤情报告令人痛心；救助伤者的亲历者称被打女孩由多惨；唐山“雷霆行动”只是做表面文章。【 #大陆民生 】| #大纪元新闻网" src=""></a><a href="https://d3frzobj0kj0md.cloudfront.net/S3q6KRAfn"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/9RcQWiFP6_0" width="600" b="397" frameborder="0" allowfullscreen="allowfullscreen"></a></center>唐山打人事件发生于6月10日凌晨，多名男子在烧烤店围殴4名女子，并把受害人拖到后巷暴打。相关视频震惊舆论。</p>
+<p><center><a title="网友实地探访唐山打人事件案发地；目击者谈唐山烧烤店巷子事件；唐山被打女孩的伤情报告令人痛心；救助伤者的亲历者称被打女孩由多惨；唐山“雷霆行动”只是做表面文章。【 #大陆民生 】| #大纪元新闻网" src=""></a><a href="https://d2torrlf4djx10.cloudfront.net/Z3y6KRAfv"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/9RcQWiFP6_0" width="600" b="397" frameborder="0" allowfullscreen="allowfullscreen"></a></center>唐山打人事件发生于6月10日凌晨，多名男子在烧烤店围殴4名女子，并把受害人拖到后巷暴打。相关视频震惊舆论。</p>
 <p>大陆民众挖出唐山警匪勾结证据。有人在抖音曝光，唐山公安局长和打人的5人帮成员在一起吃喝。同时大陆媒体报导，原唐山市委书记张和充当黑恶势力保护伞。</p>
 <p>尽管该事件引发几十亿人关注，但在中共打压下事件被淡化。9月23日，该案的28名被告一审宣判，主犯陈继志被判处24年。4名受害女子均未出庭。</p>
 <p>而唐山打人事件只是冰山一角，全中国还有许许多多更恶劣的伤害案并未被曝光。</p>
-<p><center><a title="徐州铁链女案言论管控升级 活跃人士被警告" src=""></a><a href="https://d3frzobj0kj0md.cloudfront.net/S3q6KRAfn"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/hH9W1pPkg0k" width="600" b="397" frameborder="0" allowfullscreen="allowfullscreen"></a></center>江苏徐州“铁链女”事件于2022年初曝光。这名八孩女子在寒冬里光着脚穿着单衣，铁链锁颈，囚禁于破屋之中，引起众网民的极大同情和愤怒。</p>
+<p><center><a title="徐州铁链女案言论管控升级 活跃人士被警告" src=""></a><a href="https://d2torrlf4djx10.cloudfront.net/Z3y6KRAfv"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/hH9W1pPkg0k" width="600" b="397" frameborder="0" allowfullscreen="allowfullscreen"></a></center>江苏徐州“铁链女”事件于2022年初曝光。这名八孩女子在寒冬里光着脚穿着单衣，铁链锁颈，囚禁于破屋之中，引起众网民的极大同情和愤怒。</p>
 <p>其中“铁链女”的一句“这个世界不要俺了”，更令无数网友泪目，并被多名音乐人改编成歌曲在网上广传。</p>
 <p>此后，“铁链女”被送进精神病院，自此消失在公众视野。</p>
 <p>5月初中共曾发通告，敦促拐卖妇儿罪犯自首。舆论指中共出台法律是为铁链女事件灭火，该事件背后是中共体制做恶的利益链条，只有改变体制才能解救成千上万的锁链女。</p>
@@ -48,31 +48,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/14/n10144729.md#1" target="_blank">林辉：支持缅共的知青旅往事并不如烟</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/24/n4647598.md#1" target="_blank">在法轮大法修炼中重生的宁德人（一）</a></li><hr>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/26/n10932836.md#1" target="_blank">张林：间谍国（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/6/n11705340.md#1" target="_blank">修炼真善忍 “巨型脑肿瘤”不治而愈</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950568.md#1">明末改朝换代关帝君显灵  天命不可违人算不如天算</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951783.md#1">挣脱监控 新西兰中领馆出逃员工心路历程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953285.md#1">独家：“神的指引” 中领馆员工成功出逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13951097.md#1">【百年真相】30岁自尽 钢琴家顾圣婴悲歌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13952758.md#1">【未解之谜】别找了 外星人早来地球了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/21/n13955320.md#1">【财商天下】中国意外降准 释放什么信息？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/21/n13955425.md#1">【中国禁闻】蔡奇兼掌中办 习手握大权有隐忧？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13956027.md#1">【时事金扫描】习近平答应普京什么？美国反击</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13954023.md#1">习近平普京将第40次会面 各方态度一次看</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953821.md#1">“孔乙己文学”走红 中国年轻人不再被忽悠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954335.md#1">中共重提“大兴调查研究”分析：危机四伏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953953.md#1">御用配音员姜广涛被捕 刘恺威近十年作品恐下架</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/21/n13955475.md#1">消失一年半 赵薇被拍到手持身份证现身机场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955715.md#1">艾成离世7个月 40岁胞弟艾翔心肌梗塞离世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954682.md#1">汤唯获韩年度最佳女演员 被奖杯上一段话感动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/21/n13954943.md#1">与陈亚兰合作新戏 检场挑战“没台词”角色</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13948030.md#1">为何每天喝3杯这种茶 可以逆转衰老3年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954352.md#1">搭机时如何睡个好觉？ 睡眠专家提供建议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944686.md#1">洗蔬果简单又好用的方法 让你不再吃进农药</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954551.md#1">全方位保持卧室干净舒适的清洁技巧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941600.md#1">从1个小时开始 改善财务窘境25招</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962992.md#1">【车评】橙黄之色 2023 Toyota Tacoma TRD Pro</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963361.md#1">【时事金扫描】川普被起诉牵涉大 解读混乱局势</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/19/n13848759.htm">中共公安部称中国最安全 民讥讽：唐山最安全</a></p><hr>
