--- a/gb/23/1/11/n13904494.md
+++ b/gb/23/1/11/n13904494.md
@@ -45,31 +45,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/17/n9856265.md#1" target="_blank">毛泽东诗词中的“真情”与马列婚外情</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/27/n3668851.md#1" target="_blank">吕溪珍：对大连警察的劝善信</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/23/n10735061.md#1" target="_blank">古玉文：窃国初期中共几十万干部争当陈世美</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/30/n9092520.md#1" target="_blank">法轮大法洪传新西兰 20年点滴回顾</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951783.md#1">挣脱监控 新西兰中领馆出逃员工心路历程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947696.md#1">【未解之谜】邮票上的预言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947935.md#1">才能出众护国大将军 因一句话遭现世报而绝嗣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950328.md#1">【未解之谜】消失的《小人国》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923682.md#1">【古道人生】看相的说他恐怕冻饿而死 他却中了进士</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13951097.md#1">【百年真相】30岁自尽 钢琴家顾圣婴悲歌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951934.md#1">【中国禁闻】中国银行系统危险？ 央行称要拆金融炸弹</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951923.md#1">【环球直击】尹锡悦访东京 日韩关系升温</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951707.md#1">被改装的中国产无人机在乌东遭击落</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951507.md#1">河南多地突降大雪 此前最高气温达30℃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951841.md#1">台积电创办人：芯片产业全球化已死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13951063.md#1">被指撞脸杨紫琼 杨绣惠晒同框合照 网友嗨翻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13951154.md#1">白冰冰曝费玉清退休生活：来无影去无踪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951954.md#1">离婚一年半晒与汪涵合照 欧弟暴瘦引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13951117.md#1">港星张继聪登周星驰IG 付20元入场费帮审片</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950322.md#1">蔡卓妍晒与5大咖合照 张学友一举动笑翻网友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951529.md#1">如何强化记忆力？ 世界纪录保持人教你几招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947423.md#1">传统药物破坏身体系统 8种自然疗法缓解头痛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950702.md#1">什么是“慢游”？有何好处？ 专家细说分明</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952064.md#1">银行接连倒 美国房市会不会崩？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950859.md#1">知道10个技巧 轻松煮出美味砂锅菜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962992.md#1">【车评】橙黄之色 2023 Toyota Tacoma TRD Pro</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963361.md#1">【时事金扫描】川普被起诉牵涉大 解读混乱局势</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/11/n13904494.htm">【一线采访】养老院老人疫亡 死因不写染疫</a></p><hr>
